--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+	<div class="answers">
+		<p>add your answers here.</p>
+	</div>
+
 	<a id="clickMe" href="#">click me</a>
 
 	<div class="demo-module">
