Added answers to html and styling Css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 	<div class="answers">
-		<p>add your answers here.</p>
+		<p id="1"> document.querySelector() selects the first one of each element or class ID defined by the different selectors chosen.
+			getElemnetById selects an element and all it contains by their html class ID.</p>
+		<p id="2"> the # must be removed as it is the ID sign for a CSS ID and not an element ID.</p>
+		<p id="3">To select All I would use getElemnetById over document.querySelectorAll(). To select the second one I would use getElemnetById</p>
 	</div>
 
 	<a id="clickMe" href="#">click me</a>
