change in css: trying align for demo.module and answers style with p.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+	<h1>Anne's answers for Assignment week 2</h1>
+	
 	<div class="answers">
 		<p id="1"> 1. document.querySelector() selects the first one of each element or class ID defined by the different selectors chosen.
 			getElemnetById selects an element and all it contains by their html class ID.</p>
