--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 	<h1>Anne's answers for Assignment week 2</h1>
-	
+
 	<div class="answers">
 		<p id="1"> 1. document.querySelector() selects the first one of each element or class ID defined by the different selectors chosen.
-			getElemnetById selects an element and all it contains by their html class ID.</p>
+			getElementById selects an element and all it contains by their html class ID.</p>
 		<p id="2"> 2. the # must be removed as it is the ID sign for a CSS ID and not an element ID.</p>
-		<p id="3"> 3. To select All I would use getElementById over document.querySelectorAll(). To select the second one I would use getElemnetById</p>
+		<p id="3"> 3. To select All I would use getElementById over document.querySelectorAll(). To select the second one I would use getElementById</p>
 	</div>
 
 	<a id="clickMe" href="#">click me</a>
