--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<a id="clickMe" href="#">click me</a>
 
 	<div class="demo-module">
-		<p>make this text look different</p>
+		<p id= "text">make this text look different</p>
 	</div>
 
 	<script src="script.js"></script>
