Added Answers to HW Questions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
 	<div class="answers">
-		<p>add your answers here.</p>
+		<p>
+			1. a) QuerySelector returns a static set of elements while GetElementById returns a live set of elements.
+			<span>
+			b) GetElementById makes more defined selections.
+			<span>
+			c) QuerySelector is more computational expensive.
+			<span>
+		  <span>
+			2. The hash is wrong. Correct way would be 'document.GetElementById('foo')'.
+			<span>
+		  <span>
+			3. I would select them by using 'document.querySelectorAll(‘.container p’)'
+    </p>
+
 	</div>
 
 	<a id="clickMe" href="#">click me</a>
