--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="answers">
-		<p>--------</p>
+		<p>add your answers here.</p>
 	</div>
 
 	<a id="clickMe" href="#">click me</a>
